@@ -27,3 +27,4 @@
 - a couple of new QwtPlotCurve::setSamples alternatives
 - qwtMinF/qwtMaxF added to avoid compiler issues, when qreal us a float
 - QwtPlotGraphicItem added
+- QwtMatrixRasterData::BicubicInterpolation added
